--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html>
- <title>Weer API</title>
+ <title>Home</title>
  	<head>
  	<link rel="stylesheet" type="text/css" href="Styling/home_style.css">
+ 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
-	<body>
-	<div id="homepagina">
-	<div>
-		<a id="href" href="">Prodcucten bekijken</a> <a id="href" href="">Prodcuct bekijken</a> <a id="href" href="">Winkelwagen bekijken</a>
-	</div> 
-	<h1 id="titel">Welkom op de webshop van de slijterij 'T Vaatje</h1>
+	<body onload="uitloggen();">
+	<div id="homepagina" style>
+
+	
+
+	<a id="href" href="home.html">Home</a>	<a id="href" href="producten.html">Prodcucten bekijken</a> 
+	<a id="href" href="product.html">Product bekijken</a> <a id="href" href="winkelwagen.html">Winkelwagen bekijken</a> 
+	<a id="href" href="toevoegen.html">Product Toevoegen</a> <input id="uitloggen" type="button" value="Uitloggen">
+	<br><br>
+	<div class="w3-container w3-blue sky">
+ 		<h2 id="titel">Welkom op de webshop van de slijterij 'T Vaatje</h2>
+	</div>
+	
 	<h3>Hier kunt u alle informatie over de producten in onze winkel vinden.<br>
 	En natuurlijk ook bestellen.</h3>
-	<img src=Pictures\Slijterij-1.jpg alt="Paris" width="400" height="220">
+	
+
+  	 <img  id="img1" src=Pictures\Slijterij-1.jpg width="400" height="220"><br><br>
+
+	
+	<div class="w3-container w3-blue sky">
+	Heeft u nog vragen over een paar producten of opmerking u kunt altijd contact met ons opnemen?<br>
+	Contact info: <br><br>
+	Hoofdkantoor Nederland<br>
+	Kruisboog 42<br>
+	3905 TG Veenendaal<br>
+	+31 6 23714120
+	</div>
 	</div>
  	</body>
  	
