--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
- <title>Weer API</title>
+ <title>Inloggen</title>
  	<head>
  	<link rel="stylesheet" type="text/css" href="Styling/main_style.css">
+ 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
 	<body onload="login();">
 	<div id="inlogpagina">
 	<h1 id="titel">Welkom op de inlogpagina van de slijterij 'T Vaatje</h1>
 	<h2 id="titel">Hier kunt U inloggen om verder te gaan op de website</h2>
 	<div id="inlog1">
-	<form id="inlog">
-		Naam: <input type="text" name="username"><br><br>
-	 	Wachtwoord: <input type="password" name="password"><br><br>
+	<form id="inlog3">
+		Naam: <input id="username" type="text" name="username"><br><br>
+	 	Wachtwoord: <input id="password" type="password" name="password"><br><br>
 	  	<input type="button" value="Inloggen" id="inloggen"><br><br>
 	 </form>
 	 </div>
