--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -5,14 +5,15 @@
  	<link rel="stylesheet" type="text/css" href="Styling/home_style.css">
  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
-	<body onload="uitloggen();">
-	<div id="homepagina" style>
+	<body onload="uitloggen(); getToken();">
+	<div id="homepagina">
 
 	
 
 	<a id="href" href="home.html">Home</a>	<a id="href" href="producten.html">Prodcucten bekijken</a> 
 	<a id="href" href="product.html">Product bekijken</a> <a id="href" href="winkelwagen.html">Winkelwagen bekijken</a> 
-	<a id="href" href="toevoegen.html">Product Toevoegen</a> <input id="uitloggen" type="button" value="Uitloggen">
+	<a class="visibleAdmin"id="href" href="toevoegen.html">Product Toevoegen</a>
+	<a id="href" href="main.html">Inloggen</a> <input id="uitloggen" type="button" value="Uitloggen">
 	<br><br>
 	<div class="w3-container w3-blue sky">
  		<h2 id="titel">Welkom op de webshop van de slijterij 'T Vaatje</h2>
@@ -37,4 +38,5 @@
  	</body>
  	
  	<script src="Scripts\home_script.js" type="text/javascript"></script>
+ 	<script src="Scripts\rechten.js" type="text/javascript"></script>
 </html>
