--- a/src/main/webapp/producten.html
+++ b/src/main/webapp/producten.html
@@ -5,12 +5,13 @@
  	<link rel="stylesheet" type="text/css" href="Styling/home_style.css">
  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
-	<body onload="showProducten(); uitloggen();">
+	<body onload="showProducten(); uitloggen(); getToken();">
 	<div id="homepagina">
 	<div>
 	<a id="href" href="home.html">Home</a>	<a id="href" href="producten.html">Prodcucten bekijken</a> 
 	<a id="href" href="product.html">Product bekijken</a> <a id="href" href="winkelwagen.html">Winkelwagen bekijken</a> 
-	<a id="href" href="toevoegen.html">Product Toevoegen</a> <input id="uitloggen" type="button" value="Uitloggen"><br><br>
+	<a class="visibleAdmin" id="href" href="toevoegen.html">Product Toevoegen</a>
+	<a id="href" href="main.html">Inloggen</a> <input id="uitloggen" type="button" value="Uitloggen"><br><br>
 	</div> 
 	<div class="w3-container w3-blue sky">
 	<h1 id="titel">Producten bekijken</h1>
@@ -26,6 +27,10 @@
 	</table>
 	</div>
  	</body>
- 	
+ 	<form id="winkelwagen">
+ 		Naam: <input id="productnaam2" type="text" name="productnaam"><br><br>
+		Prijs: <input id="product_prijs2" type="number" name="productprijs"><br><br>
+ 	</form>
  	<script src="Scripts\producten_script.js" type="text/javascript"></script>
+ 	<script src="Scripts\rechten.js" type="text/javascript"></script>
 </html>
