Laatse commit alles werkt en comments geplaats

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -2,19 +2,22 @@
 <html>
  <title>Home</title>
  	<head>
+ 	<!-- Een import naar stylesheets die ik gebruik voor de webshop -->
  	<link rel="stylesheet" type="text/css" href="Styling/home_style.css">
  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
+ 	<!-- Alle functies die worden gebruikt -->
 	<body onload="uitloggen(); getToken();">
 	<div id="homepagina">
 
 	
-
+	<!-- Alle links naar alle pagina's -->
 	<a id="href" href="home.html">Home</a>	<a id="href" href="producten.html">Prodcucten bekijken</a> 
 	<a id="href" href="product.html">Product bekijken</a> <a id="href" href="winkelwagen.html">Winkelwagen bekijken</a> 
 	<a class="visibleAdmin"id="href" href="toevoegen.html">Product Toevoegen</a>
 	<a id="href" href="main.html">Inloggen</a> <input id="uitloggen" type="button" value="Uitloggen">
 	<br><br>
+	<!-- Header -->
 	<div class="w3-container w3-blue sky">
  		<h2 id="titel">Welkom op de webshop van de slijterij 'T Vaatje</h2>
 	</div>
@@ -25,7 +28,7 @@
 
   	 <img  id="img1" src=Pictures\Slijterij-1.jpg width="400" height="220"><br><br>
 
-	
+	<!-- footer -->
 	<div class="w3-container w3-blue sky">
 	Heeft u nog vragen over een paar producten of opmerking u kunt altijd contact met ons opnemen?<br>
 	Contact info: <br><br>
@@ -36,7 +39,7 @@
 	</div>
 	</div>
  	</body>
- 	
+ 	<!-- Scripts -->
  	<script src="Scripts\home_script.js" type="text/javascript"></script>
  	<script src="Scripts\rechten.js" type="text/javascript"></script>
 </html>
