--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -2,20 +2,25 @@
 <html>
  <title>Inloggen</title>
  	<head>
+ 	<!-- Een import naar stylesheets die ik gebruik voor de webshop -->
  	<link rel="stylesheet" type="text/css" href="Styling/main_style.css">
  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
+ 	<!-- Alle functies die worden gebruikt -->
 	<body onload="login();">
 	<div id="inlogpagina">
+	<!-- Header -->
 	<h1 id="titel">Welkom op de inlogpagina van de slijterij 'T Vaatje</h1>
 	<h2 id="titel">Hier kunt U inloggen om verder te gaan op de website</h2>
 	<div id="inlog1">
+	<!-- Inlogsysteem -->
 	<form id="inlog3">
 		Naam: <input id="username" type="text" name="username"><br><br>
 	 	Wachtwoord: <input id="password" type="password" name="password"><br><br>
 	  	<input type="button" value="Inloggen" id="inloggen"><br><br>
 	 </form>
 	 </div>
+	 <!-- Verwijzing naar registeren -->
 	 <div id="registreer1">
 	 Heeft u nog geen account? Klik dan hier om een account aan te maken!:<br><br>
 	 <a id="href1" href="registreren.html">Maak een account</a>
