--- a/src/main/webapp/registreren.html
+++ b/src/main/webapp/registreren.html
@@ -2,13 +2,17 @@
 <html>
  <title>Registeren</title>
  	<head>
+ 	<!-- Een import naar stylesheets die ik gebruik voor de webshop -->
  	<link rel="stylesheet" type="text/css" href="Styling/main_style.css">
  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
+ 	<!-- Alle functies die worden gebruikt -->
 	<body onload="registreren();">
 	<div id="inlogpagina">
 	<div id="registreer3">
+	<!-- Header -->
 	<h2 id="title">Maak een account aan! </h2>
+	<!-- Registreerstysteem -->
 	<form id="registreer2">
 		Voornaam*: <input id="voornaam" type="text" name="voornaam"><br><br>
 		Tussenvoegsel: <input id="tussenvoegsel" type="text" name="tussenvoegsel"><br><br>
@@ -19,7 +23,7 @@
 	  	<input type="button" value="Registreer!" id="registreren">
 	  	
 	 </form>
-	
+	<!-- Verwijzing naar inloggen -->
 	Toch wel een account? Klik hier om in te loggen!<br><br>
 	<a id="href1" href="main.html">Inloggen</a>
 	</div>
