--- a/src/main/webapp/betalen.html
+++ b/src/main/webapp/betalen.html
@@ -2,17 +2,21 @@
 <html>
  <title>Betalen</title>
  	<head>
+ 	<!-- Een import naar stylesheets die ik gebruik voor de webshop -->
  	<link rel="stylesheet" type="text/css" href="Styling/betalen_style.css">
  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
-	<body onload="betalen(); getToken(); getAantal();">
+ 	<!-- Alle functies die worden gebruikt -->
+	<body onload="betalen(); getToken(); getAantal(); post_bestelling();">
 	<div id="betalen_pagina">
+	<!-- Alle links naar alle pagina's -->
 	<div>
 	<a id="href" href="home.html">Home</a>	<a id="href" href="producten.html">Prodcucten bekijken</a> 
 	<a id="href" href="product.html">Product bekijken</a> <a id="href" href="winkelwagen.html">Winkelwagen bekijken</a> 
 	<a class="visibleAdmin" id="href" href="toevoegen.html">Product Toevoegen</a>
 	<a id="href" href="main.html">Inloggen</a> <input id="uitloggen" type="button" value="Uitloggen"><br><br>
 	</div> 
+	<!-- Header -->
 	<div class="w3-container w3-blue sky">
 	<h1 id="titel">Producten betalen</h1>
 	<h3>Hier staan alle producten die u nu gaat betalen. </h3>
@@ -25,10 +29,11 @@
 	</tr>
 	</table>
 	<p id="totale_prijs1"> Totale prijs:  </p><br>
-	Postcode: <input id="postcode" type="text"><br><br>
-	Straat: <input id="straat" type="text" ><br><br>
-	Huisnummer: <input id="huisnummer" type="text" ><br><br>
-	Toevoegingen: <input id="toevoegingen" type="text" ><br><br>
+	<!-- De velden die moeten worden ingevuld -->
+	Postcode: <input required id="postcode" type="text"><br><br>
+	Straat: <input required id="straat" type="text" ><br><br>
+	Huisnummer: <input required id="huisnummer" type="text" ><br><br>
+	Toevoegingen: <input required id="toevoegingen" type="text" ><br><br>
 	
 	<input id="betalen" type="button" value="Betalen">
 	</div>
@@ -38,7 +43,7 @@
 		<input id="id" type="text" name="id"><br><br>
 	 </form>
  	</body>
- 	
+ 	<!-- Scripts -->
  	<script src="Scripts\betalen_script.js" type="text/javascript"></script>
  	<script src="Scripts\rechten.js" type="text/javascript"></script>
 </html>
