--- a/src/main/webapp/toevoegen.html
+++ b/src/main/webapp/toevoegen.html
@@ -2,22 +2,27 @@
 <html>
  <title>Toevoegen</title>
  	<head>
+ 	<!-- Een import naar stylesheets die ik gebruik voor de webshop -->
  	<link rel="stylesheet" type="text/css" href="Styling/home_style.css">
  	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  	</head>
+ 	<!-- Alle functies die worden gebruikt -->
 	<body onload="add_product(); uitloggen(); getToken();">
 	<div id="homepagina">
 	<div>
+	<!-- Alle links naar alle pagina's -->
 	<a id="href" href="home.html">Home</a>	<a id="href" href="producten.html">Prodcucten bekijken</a> 
 	<a id="href" href="product.html">Product bekijken</a> <a id="href" href="winkelwagen.html">Winkelwagen bekijken</a> 
 	<a class="visibleAdmin" id="href" href="toevoegen.html">Product Toevoegen</a>
 	<a id="href" href="main.html">Inloggen</a> <input id="uitloggen" type="button" value="Uitloggen"><br><br>
 	</div> 
+	<!-- Header -->
 	<div class="w3-container w3-blue sky">
 	<h1 id="titel">Product toevoegen</h1>
 	<h3>Hier kunt u een nieuw product toevoegen aan de webshop </h3>
 	</div>
 	<br>
+	<!-- Toevoegen aan de database -->
  	<form id="toevoegen3">
 		Naam: <input id="input" type="text" name="naam"><br><br>
 		Prijs: <input id="input2" type="number" name="prijs"><br><br>
